--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@react-email/components": "0.0.36",
     "@react-email/render": "^1.0.6",
     "@react-email/tailwind": "^1.0.4",
+    "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.6.0",
+    "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
+    "lucide-react": "^0.503.0",
     "next": "15.3.1",
     "next-cloudinary": "^6.16.0",
     "next-intl": "^4.0.3",
@@ -24,6 +27,8 @@
     "nuqs": "^2.4.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.2.0",
+    "tw-animate-css": "^1.2.8",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
