--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@bprogress/next": "^3.2.12",
     "@prisma/client": "^6.6.0",
+    "@radix-ui/react-slot": "^1.2.0",
     "@react-email/components": "0.0.36",
     "@react-email/render": "^1.0.6",
     "@react-email/tailwind": "^1.0.4",
