Configure next-themes and next-intl

--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "portfolio",
+  "name": "next-app-quickstart",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "email": "email dev --port 3001",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@bprogress/next": "^3.2.12",
     "@prisma/client": "^6.6.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.12",
     "@radix-ui/react-slot": "^1.2.0",
     "@react-email/components": "0.0.36",
     "@react-email/render": "^1.0.6",
